# gameboost_tl

./: .gitignore  README.md  install.ps1  pyproject.toml  requirements.txt  update.ps1
cookies/: cookies.txt
src/: main.py  test.py
src/app/: __init__.py  crwl.py  decorators.py  gameboost_client.py  process.py  test.py
src/app/crwl/: crwl.py  models.py
src/app/gameboost/: api.py  models.py
src/app/gsheet_cache/: manager.py
src/app/models/: crwl_models.py  gsheet_models.py  process_models.py
src/app/processes/: account.py  currency.py  item.py  main_process.py  shared.py
src/app/service/: data_cache.py
src/app/shared/: browser_manager.py  config.py  consts.py  decorators.py  enums.py
src/app/sheet/: models.py  utils.py
