[project]
name = "gameboost-tl"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "python-dotenv>=1.0.1",
    "seleniumbase>=4.33.11",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.10.4",
    "gspread>=6.1.4",
    "pip>=24.3.1",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
